--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
             </div>
 
             <div class="destination" id="Egypt">
-                <h2>Berlin</h2>
+                <h2>Egypt</h2>
             </div>
+			
+			<div class="destination" id="KSA">
+                <h2>KSA</h2>
+            </div>
+			
         </div>
     </div>
 
